Added files to .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,63 @@
 
+.snakemake/log/2022-05-28T172016.269974.snakemake.log
+.snakemake/log/2022-05-28T172211.957937.snakemake.log
+.snakemake/log/2022-05-28T172753.360749.snakemake.log
+.snakemake/log/2022-05-28T173454.353428.snakemake.log
+.snakemake/log/2022-05-28T173905.542938.snakemake.log
+.snakemake/log/2022-05-28T174357.265009.snakemake.log
+.snakemake/log/2022-05-28T182328.902703.snakemake.log
+.snakemake/log/2022-05-28T182627.643068.snakemake.log
+.snakemake/log/2022-05-28T191323.041005.snakemake.log
+.snakemake/log/2022-05-28T200009.687080.snakemake.log
+.snakemake/log/2022-05-28T201448.710589.snakemake.log
+.snakemake/log/2022-05-28T201553.983813.snakemake.log
+.snakemake/log/2022-05-28T201715.612943.snakemake.log
+.snakemake/log/2022-05-28T201939.360921.snakemake.log
+.snakemake/log/2022-05-28T202120.512165.snakemake.log
+.snakemake/log/2022-05-28T202300.297503.snakemake.log
+.snakemake/log/2022-05-28T202417.230356.snakemake.log
+.snakemake/log/2022-05-28T202535.240762.snakemake.log
+.snakemake/log/2022-05-28T202704.763236.snakemake.log
+.snakemake/log/2022-05-28T202924.281822.snakemake.log
+.snakemake/log/2022-05-28T203048.359285.snakemake.log
+.snakemake/log/2022-05-28T203223.093360.snakemake.log
+.snakemake/log/2022-05-28T203337.831218.snakemake.log
+.snakemake/log/2022-05-28T203528.846432.snakemake.log
+.snakemake/log/2022-05-28T204142.581202.snakemake.log
+.snakemake/log/2022-05-28T204324.789668.snakemake.log
+.snakemake/log/2022-05-28T223014.032650.snakemake.log
+.snakemake/log/2022-05-28T223615.154753.snakemake.log
+.snakemake/log/2022-05-28T223918.101450.snakemake.log
+.snakemake/log/2022-05-28T224114.029212.snakemake.log
+.snakemake/log/2022-05-28T224555.922673.snakemake.log
+.snakemake/log/2022-05-28T224948.501665.snakemake.log
+.snakemake/log/2022-05-28T231858.899939.snakemake.log
+.snakemake/log/2022-05-28T232213.590963.snakemake.log
+.snakemake/log/2022-05-28T234441.302944.snakemake.log
+.snakemake/log/2022-05-28T235220.185481.snakemake.log
+.snakemake/metadata/cmVwb3J0L291dF9odG1sL3BlYWtzX01NLmh0bWw=
+.snakemake/metadata/cmVwb3J0L291dF9tZC9fc2l0ZS55bWw=
+.snakemake/metadata/cmVwb3J0L291dF9tZC9wZWFrc19NTS5tZA==
+.snakemake/metadata/cmVwb3J0L291dF9tZC9wZWFrc19NTV90bXAubWQ=
+Latex/kursinis_darbas.aux
+Latex/kursinis_darbas.fdb_latexmk
+Latex/kursinis_darbas.fls
+Latex/kursinis_darbas.log
+Latex/kursinis_darbas.pdf
+Latex/kursinis_darbas.synctex.gz
+Latex/kursinis_darbas.toc
+report/logs/peaks_HG_logs.txt
+report/logs/peaks_MM_logs.txt
+report/out_html/peaks_MM.html
+report/out_md/_site.yml
+report/out_md/peaks_MM.md
+report/out_md/figure/peaks_MM/fig-1.png
+report/out_md/figure/peaks_MM/fig2-1.png
+report/out_md/figure/peaks_MM/unnamed-chunk-1-1.png
+Latex/kursinis_darbas.toc
+Latex/kursinis_darbas.synctex.gz
+Latex/kursinis_darbas.pdf
+Latex/kursinis_darbas.log
+Latex/kursinis_darbas.fls
+Latex/kursinis_darbas.fdb_latexmk
+Latex/kursinis_darbas.aux
